platform/observability/kubernetes/apps/grafana/overlays/application/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.homelab.internal,grafana.teaglebuilt.tech
spec:
  parentRefs:
  - name: homelab-internal-gateway
    namespace: kube-system
  hostnames:
    - grafana.homelab.internal
    - grafana.teaglebuilt.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: prometheus-community-grafana
      port: 80
